--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -4,6 +4,10 @@
       <ng-container *ngIf="currentRoute === '/restaurants'">
         <i  class="fa-solid fa-angle-left" (click)="goToHome()"></i>
       </ng-container>
+      <ng-container *ngIf="isMenuRoute()">
+      <i class="fa-solid fa-angle-left" (click)="goToRestaurants()"></i>
+    </ng-container>
+
       <img class="logo" [src]="apiUrl + logo" alt="Your Image">
       <h2>Webstaurator</h2>
 
